// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Mentions/demo/basic.md correctly 1`] = `
<div
  class="arco-mentions arco-mentions-align-textarea"
  style="width:154px"
>
  <textarea
    class="arco-textarea arco-mentions-textarea"
    rows="1"
  >
    @Bytedance
  </textarea>
  <div
    class="arco-mentions-measure"
  >
    <span
      class="arco-mentions-measure-trigger"
    />
    @Bytedance
  </div>
</div>
`;

exports[`renders Mentions/demo/control.md correctly 1`] = `
<form
  class="arco-form arco-form-horizontal arco-form-size-default"
  style="width:360px"
>
  <div
    class="arco-row arco-row-align-start arco-row-justify-start arco-form-item arco-form-layout-horizontal"
  >
    <div
      class="arco-col arco-col-5 arco-form-label-item"
    >
      <label
        for="task_input"
      >
        <strong
          class="arco-form-item-symbol"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M583.338667 17.066667c18.773333 0 34.133333 15.36 34.133333 34.133333v349.013333l313.344-101.888a34.133333 34.133333 0 0 1 43.008 22.016l42.154667 129.706667a34.133333 34.133333 0 0 1-21.845334 43.178667l-315.733333 102.4 208.896 287.744a34.133333 34.133333 0 0 1-7.509333 47.786666l-110.421334 80.213334a34.133333 34.133333 0 0 1-47.786666-7.509334L505.685333 706.218667 288.426667 1005.226667a34.133333 34.133333 0 0 1-47.786667 7.509333l-110.421333-80.213333a34.133333 34.133333 0 0 1-7.509334-47.786667l214.186667-295.253333L29.013333 489.813333a34.133333 34.133333 0 0 1-22.016-43.008l42.154667-129.877333a34.133333 34.133333 0 0 1 43.008-22.016l320.512 104.106667L412.672 51.2c0-18.773333 15.36-34.133333 34.133333-34.133333h136.533334z"
            />
          </svg>
        </strong>
         Task
      </label>
    </div>
    <div
      class="arco-col arco-col-19 arco-form-item-wrapper"
    >
      <div
        class="arco-form-item-control-wrapper"
      >
        <div
          class="arco-form-item-control"
          id="task"
        >
          <div
            class="arco-form-item-control-children"
          >
            <input
              class="arco-input arco-input-size-default"
              id="task_input"
              value="Component usage"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="arco-row arco-row-align-start arco-row-justify-start arco-form-item arco-form-layout-horizontal"
  >
    <div
      class="arco-col arco-col-5 arco-form-label-item"
    >
      <label
        for="name_input"
      >
        <strong
          class="arco-form-item-symbol"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M583.338667 17.066667c18.773333 0 34.133333 15.36 34.133333 34.133333v349.013333l313.344-101.888a34.133333 34.133333 0 0 1 43.008 22.016l42.154667 129.706667a34.133333 34.133333 0 0 1-21.845334 43.178667l-315.733333 102.4 208.896 287.744a34.133333 34.133333 0 0 1-7.509333 47.786666l-110.421334 80.213334a34.133333 34.133333 0 0 1-47.786666-7.509334L505.685333 706.218667 288.426667 1005.226667a34.133333 34.133333 0 0 1-47.786667 7.509333l-110.421333-80.213333a34.133333 34.133333 0 0 1-7.509334-47.786667l214.186667-295.253333L29.013333 489.813333a34.133333 34.133333 0 0 1-22.016-43.008l42.154667-129.877333a34.133333 34.133333 0 0 1 43.008-22.016l320.512 104.106667L412.672 51.2c0-18.773333 15.36-34.133333 34.133333-34.133333h136.533334z"
            />
          </svg>
        </strong>
         Name
      </label>
    </div>
    <div
      class="arco-col arco-col-19 arco-form-item-wrapper"
    >
      <div
        class="arco-form-item-control-wrapper"
      >
        <div
          class="arco-form-item-control"
          id="name"
        >
          <div
            class="arco-form-item-control-children"
          >
            <div
              class="arco-mentions"
            >
              <textarea
                class="arco-textarea arco-mentions-textarea"
                id="name_input"
                placeholder="You can use @ Plato to mention Platon"
                rows="2"
              />
              <div
                class="arco-mentions-measure"
              >
                <span
                  class="arco-mentions-measure-trigger"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="arco-row arco-row-align-start arco-row-justify-start arco-form-item arco-form-layout-horizontal"
  >
    <div
      class="arco-col arco-col-24 arco-col-offset-5 arco-form-item-wrapper"
    >
      <div
        class="arco-form-item-control-wrapper"
      >
        <div
          class="arco-form-item-control"
        >
          <div
            class="arco-form-item-control-children"
          >
            <button
              class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
              style="margin:0 12px"
              type="button"
            >
              <span>
                Submit
              </span>
            </button>
            <button
              class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
              type="button"
            >
              <span>
                Reset
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`renders Mentions/demo/prefix.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center"
>
  <div
    class="arco-space-item"
    style="margin-right:40px"
  >
    <div
      class="arco-mentions arco-mentions-align-textarea"
      style="width:154px;margin-bottom:10px"
    >
      <textarea
        class="arco-textarea arco-mentions-textarea"
        placeholder="Input @"
        rows="1"
      />
      <div
        class="arco-mentions-measure"
      >
        <span
          class="arco-mentions-measure-trigger"
        />
      </div>
    </div>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:40px"
  >
    <div
      class="arco-mentions arco-mentions-align-textarea"
      style="width:154px;margin-bottom:10px"
    >
      <textarea
        class="arco-textarea arco-mentions-textarea"
        placeholder="Input #"
        rows="1"
      />
      <div
        class="arco-mentions-measure"
      >
        <span
          class="arco-mentions-measure-trigger"
        />
      </div>
    </div>
  </div>
  <div
    class="arco-space-item"
  >
    <div
      class="arco-mentions arco-mentions-align-textarea"
      style="width:154px;margin-bottom:10px"
    >
      <textarea
        class="arco-textarea arco-mentions-textarea"
        placeholder="Input *"
        rows="1"
      />
      <div
        class="arco-mentions-measure"
      >
        <span
          class="arco-mentions-measure-trigger"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Mentions/demo/status.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center"
>
  <div
    class="arco-space-item"
    style="margin-right:40px"
  >
    <div
      class="arco-mentions arco-mentions-align-textarea"
      style="width:154px"
    >
      <textarea
        class="arco-textarea arco-mentions-textarea"
        readonly=""
        rows="1"
      >
        Bytedance
      </textarea>
      <div
        class="arco-mentions-measure"
      >
        <span
          class="arco-mentions-measure-trigger"
        />
        Bytedance
      </div>
    </div>
  </div>
  <div
    class="arco-space-item"
  >
    <div
      class="arco-mentions arco-mentions-align-textarea"
      style="width:154px"
    >
      <textarea
        class="arco-textarea arco-textarea-disabled arco-mentions-textarea"
        disabled=""
        rows="1"
        style="resize:none"
      >
        Bytedance
      </textarea>
      <div
        class="arco-mentions-measure"
      >
        <span
          class="arco-mentions-measure-trigger"
        />
        Bytedance
      </div>
    </div>
  </div>
</div>
`;
